<resources>
    <string name="app_name">Jardim da Educação</string>
    <string name="app_welcome">Pré 2, fornece as habilidades I, II, III</string>>
    <string name="app_welcomee">Pré 3, fornece as habilidades I, II, III</string>>
    <string name="app_welcomeee">Pré 1, fornece as habilidades I, II, III</string>>
    <string name="app_slogan">Não tem cadastro?</string>
    <string name="app_redefinir">Redefinir sua senha</string>>
    <string name="text_inicio">Faça Login e entre no seu Jardim!</string>
    <string name="text_forgot_password"> Esqueceu sua senha?</string>
    <string name="text_sign_in">Entrar </string>
    <string name="text_pre1">PRE I </string>
    <string name="text_password">Senha</string>
    <string name="text_sucesso">Sucesso</string>
    <string name="text_numero">Número</string>
    <string name="text_email_or_username">Email ou Nome de Usuario </string>
    <string name="text_error_fill_mandatory_information">Mandatory information </string>
    <string name="name_tela">Inicial</string>
    <string name="text_email">Coloque o seu Número</string>
    <string name="text_register">Cadastre-se</string>
    <string name="text_assistir">Clique para assistir</string>
    <string name="text_pdf">Para que possamos enviar a atividade em PDF,para o seu filho(a)</string>
    <string name="text_atividade">Iniciar atividade</string>
    <string name="text_atividade1">IMPRIMA E LIGUE OS OBJETOS ÁS PARTES DO CORPO NAS QUAIS ELES SÃO USADOS.</string>
    <string name="app_cadastro">Cadastrar</string>
    <string name="text_button">Iniciar</string>
    <string name="button">Confirmar</string>
    <string name="text_bloqueado">Bloqueado</string>
    <string name="text_name_student">Nome do aluno</string>
    <string name="text_date_of_birth">Data de Nascimento</string>
    <string name="text_responsible_person_email">E-mail do responsável</string>
    <string name="text_senha">Senha</string>
    <string name="text_school_grade">Série escolar</string>
    <string name="text_conclude">Concluir</string>
    <string name="App_senhaNova">Senha Nova</string>
    <string name="App_confirmarsenhaNova">Confirmar Senha Nova</string>
    <string name="App_confirmar">Confirmar </string>
    <string name="text_app">Esse aplicativo é para um desempenho melhor do seu filho! Com unidades do pré 1 ao pre 3.O Aplicativo possui atividades adaptadas para cada série e idade o jardim da educação não subtitui a escola, mas sim um reforço.</string>
</resources>