<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".Inicial">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_arvore"
        android:layout_width="269dp"
        android:layout_height="218dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/arvore"
        app:layout_constraintEnd_toStartOf="@+id/button_cadastrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_passaro"
        android:layout_width="183dp"
        android:layout_height="141dp"
        android:src="@drawable/passaro"
        app:layout_constraintBottom_toTopOf="@+id/textView_inicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_arvore" />

    <TextView
        android:id="@+id/textView_inicial"
        android:layout_width="372dp"
        android:layout_height="306dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_app"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/button_entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_entrar"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:background="@drawable/button"
        android:letterSpacing="0.04"
        android:text="@string/text_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="630dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cadastrar"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_button_normal"
        android:letterSpacing="0.04"
        android:text="@string/app_cadastro"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="231dp"
        tools:layout_editor_absoluteY="37dp" />


</androidx.constraintlayout.widget.ConstraintLayout>