<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView

        android:id="@+id/appCompatImageView3"
        android:layout_width="412dp"
        android:layout_height="92dp"
        android:src="@drawable/topo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="-4dp" />

    <androidx.appcompat.widget.AppCompatImageView

        android:id="@+id/appCompatImageView11"
        android:layout_width="142dp"
        android:layout_height="130dp"
        android:src="@drawable/logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="-16dp" />

    <TextView
        android:id="@+id/textView_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        android:textColor="@color/dark_purple"
        android:textSize="30sp"
        android:textStyle="italic|bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="133dp" />

    <TextView
        android:id="@+id/textView_inicial"

        android:layout_width="370dp"
        android:layout_height="82dp"
        android:fontFamily="@font/averia_serif_libre_bold"
        android:text="@string/text_pdf"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle=""
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="173dp" />


    <!--    <androidx.appcompat.widget.AppCompatEditText-->
<!--        android:id="@+id/editText"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/bg_edit_normal"-->
<!--        android:inputType="textPassword"-->
<!--        android:paddingStart="10dp"-->
<!--        android:paddingEnd="10dp"-->
<!--        android:textColor="@color/dark_purple"-->
<!--        android:textColorHint="@color/dark_purple"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        tools:layout_editor_absoluteY="238dp" />-->

    <androidx.appcompat.widget.AppCompatEditText

        android:id="@+id/editText_credentials"
        android:layout_width="386dp"
        android:layout_height="56dp"
        android:background="@drawable/bg_edit_normal"
        android:drawableTint="@color/white"
        android:hint="@string/text_numero"
        android:inputType="text"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"

        tools:ignore="MissingConstraints,UnknownIdInLayout"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="233dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_concluir"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_button_normal"
        android:letterSpacing="0.04"
        android:text="@string/button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="341dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="354dp"
        android:layout_height="326dp"
        app:srcCompat="@drawable/numero"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-8dp"
        tools:layout_editor_absoluteY="413dp" />



</androidx.constraintlayout.widget.ConstraintLayout>