<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="433dp"
        android:layout_height="290dp"
        android:src="@drawable/img"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-11dp"
        tools:layout_editor_absoluteY="209dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/green"
        android:src="@drawable/green"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_layer_gradient"
        tools:layout_editor_absoluteY="-16dp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/text_forgot_password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:text="@string/app_slogan"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/text_inicio"
        android:textColor="@color/dark_purple"
        android:textStyle="italic|bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView12"
        android:layout_width="396dp"
        android:layout_height="384dp"
        android:layout_marginBottom="376dp"
        android:src="@drawable/img"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="17dp" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

    </ScrollView>

    <androidx.appcompat.widget.AppCompatEditText

        android:id="@+id/editText_credentials"
        android:layout_width="386dp"
        android:layout_height="56dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/bg_edit_normal"
        android:drawableRight="@drawable/ic_email"
        android:drawableTint="@color/white"
        android:hint="@string/text_email_or_username"
        android:inputType="text"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_password"
        android:inputType="textPassword"
        android:layout_width="387dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edit_normal"
        android:drawableRight="@drawable/ic_password"
        android:drawableTint="@color/white"
        android:hint="@string/text_password"
        android:imeOptions="actionDone"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_credentials"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="136dp"
        android:background="@drawable/bg_button_normal"
        android:letterSpacing="0.04"
        android:text="@string/text_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>