<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bege"
    tools:context=".Cadastro">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_cadastro"
        android:layout_width="269dp"
        android:layout_height="218dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="82dp"
        android:src="@drawable/panda_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_concluir"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_data_de_nascimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="@drawable/bg_edit_normal"
        android:hint="@string/text_date_of_birth"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/dark_purple"
        android:textColorHint="@color/dark_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_nome_aluno"
        tools:ignore="MissingConstraints" />



    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_email_do_responsavel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_edit_normal"
        android:hint="@string/text_responsible_person_email"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/dark_purple"
        android:textColorHint="@color/dark_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_data_de_nascimento"
        tools:ignore="MissingConstraints" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:background="@drawable/bg_edit_normal"
        android:hint="@string/text_senha"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/dark_purple"
        android:textColorHint="@color/dark_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email_do_responsavel"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_nome_aluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:background="@drawable/bg_edit_normal"
        android:hint="@string/text_name_student"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/dark_purple"
        android:textColorHint="@color/dark_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_cadastro"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

    </ScrollView>
    <!--    <androidx.wear.protolayout.material.chip.ChipGroup-->
<!--        android:id="@+id/chip_group_option"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/purple"-->
<!--        app:singleLine="true"-->
<!--        app:singleSelection="true"-->
<!--        tools:ignore="MissingClass,MissingConstraints"-->
<!--        tools:layout_editor_absoluteX="0dp"-->
<!--        tools:layout_editor_absoluteY="379dp">-->

<!--          <androidx.wear.protolayout.material.chip.Chip-->
<!--            android:id="@+id/chip_consumption_cycle_0"-->
<!--            style="Widget.MaterialComponents.Chip.Choice"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="6dp"-->
<!--            android:checkable="false"-->
<!--            android:clickable="false"-->
<!--            android:text="PRE 1"-->
<!--            android:textSize="18sp"-->
<!--            app:chipBackgroundColor="#000000">-->

<!--        </androidx.wear.protolayout.material.chip.Chip>-->
<!--          <androidx.wear.protolayout.material.chip.Chip-->
<!--            android:id="@+id/chip_consumption_cycle_1"-->
<!--            style="Widget.MaterialComponents.Chip.Choice"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="6dp"-->
<!--            android:checkable="false"-->
<!--            android:clickable="false"-->
<!--            android:text="PRE 2"-->
<!--            android:textSize="18sp"-->
<!--            app:chipBackgroundColor="#000000">-->

<!--        </androidx.wear.protolayout.material.chip.Chip>-->
<!--        <androidx.wear.protolayout.material.chip.Chip-->
<!--            android:id="@+id/chip_consumption_cycle_2"-->
<!--            style="Widget.MaterialComponents.Chip.Choice"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="6dp"-->
<!--            android:checkable="false"-->
<!--            android:clickable="false"-->
<!--            android:text="PRE 3"-->
<!--            android:textSize="18sp"-->
<!--            app:chipBackgroundColor="#000000">-->

<!--        </androidx.wear.protolayout.material.chip.Chip> -->
<!--    </androidx.wear.protolayout.material.chip.ChipGroup>-->


<!--    <TextView-->
<!--        android:id="@+id/textView_serie"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/text_school_grade"-->
<!--        android:textColor="@color/dark_purple"-->
<!--        android:textSize="12sp"-->
<!--        android:textStyle="italic|bold"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        tools:layout_editor_absoluteX="61dp"-->
<!--        tools:layout_editor_absoluteY="434dp" />-->

    <TextView
        android:id="@+id/textView_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_register"
        android:textColor="@color/dark_purple"
        android:textSize="30sp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_concluir"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_button_normal"
        android:letterSpacing="0.04"
        android:text="@string/text_conclude"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/editText_senha"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="235dp" />


</androidx.constraintlayout.widget.ConstraintLayout>

