<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/green">


    <TextView
        android:id="@+id/pre1"
        android:layout_width="376dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:text="@string/app_welcomeee"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView6" />

    <TextView
        android:id="@+id/pre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="476dp"
        android:text="@string/app_welcome"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/appCompatImageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pre3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="684dp"
        android:text="@string/app_welcomee"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView

        android:id="@+id/appCompatImageView6"
        android:layout_width="379dp"
        android:layout_height="169dp"
        android:src="@drawable/img_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="93dp" />


    <androidx.appcompat.widget.AppCompatImageView

        android:layout_width="160dp"
        android:layout_height="64dp"
        android:src="@drawable/img_2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="139dp" />

    <androidx.appcompat.widget.AppCompatImageView

        android:id="@+id/appCompatImageView7"
        android:layout_width="366dp"
        android:layout_height="160dp"
        android:src="@drawable/img_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="308dp" />

    <androidx.appcompat.widget.AppCompatImageView

        android:id="@+id/appCompatImageView8"
        android:layout_width="366dp"
        android:layout_height="160dp"
        android:src="@drawable/img_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="524dp" />

    <androidx.appcompat.widget.AppCompatImageView

        android:layout_width="171dp"
        android:layout_height="59dp"
        android:src="@drawable/img_3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="364dp" />

    <androidx.appcompat.widget.AppCompatImageView

        android:layout_width="171dp"
        android:layout_height="59dp"
        android:src="@drawable/img_4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="575dp" />


    <androidx.appcompat.widget.AppCompatImageView

        android:id="@+id/appCompatImageView3"
        android:layout_width="542dp"
        android:layout_height="398dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/topo"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-195dp" />

    <androidx.appcompat.widget.AppCompatImageView

        android:layout_width="186dp"
        android:layout_height="183dp"
        android:src="@drawable/logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="-61dp" />


</androidx.constraintlayout.widget.ConstraintLayout>